[gd_scene load_steps=4 format=2]

[ext_resource path="res://GUI/Screen/Sprites/Larger.png" type="Texture" id=1]
[ext_resource path="res://GUI/Screen/Full_Screen.gd" type="Script" id=2]
[ext_resource path="res://GUI/Screen/Sprites/Smaller.png" type="Texture" id=3]

[node name="Full_Screen" type="TextureButton"]
anchor_right = 1.0
margin_left = 1164.46
margin_top = 596.64
margin_right = -65.5439
margin_bottom = 646.64
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 1 )
script = ExtResource( 2 )
larger_texture = ExtResource( 1 )
smaller_texture = ExtResource( 3 )

[connection signal="mouse_entered" from="." to="." method="_on_Full_Screen_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Full_Screen_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_Full_Screen_pressed"]
